<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B196E2"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:rotationX="0"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="379dp"
        android:layout_height="97dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="#B196E2"
        android:cursorVisible="false"
        android:focusable="false"
        android:gravity="right"
        android:inputType="none"
        android:longClickable="false"
        android:minHeight="48dp"
        android:text="@string/editText"
        android:textIsSelectable="false"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,RtlHardcoded" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="395dp"
        android:layout_height="428dp"
        android:layout_below="@+id/editText"
        android:layout_marginTop="15dp"
        android:columnCount="4"
        android:rowCount="5">


        <Button
            android:id="@+id/btn1"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="4dp"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            style="@style/CalculatorButton"
            android:layout_width="70dp"
            android:layout_height="87dp"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            style="@style/CalculatorButton"
            android:layout_width="75dp"
            android:layout_height="81dp"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnAddition"
            style="@style/CalculatorButton"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:text="@string/btnAddition" />

        <Button
            android:id="@+id/btn4"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            style="@style/CalculatorButton"
            android:layout_width="72dp"
            android:layout_height="92dp"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            style="@style/CalculatorButton"
            android:layout_width="78dp"
            android:layout_height="90dp"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnSubtraction"
            style="@style/CalculatorButton"
            android:layout_width="100dp"
            android:layout_height="94dp"
            android:text="@string/btnSubtractoin" />

        <Button
            android:id="@+id/btn7"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            style="@style/CalculatorButton"
            android:layout_width="70dp"
            android:layout_height="92dp"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            style="@style/CalculatorButton"
            android:layout_width="75dp"
            android:layout_height="90dp"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnMultiplication"
            style="@style/CalculatorButton"
            android:layout_width="102dp"
            android:layout_height="92dp"
            android:text="@string/btnMultiplication" />

        <Button
            android:id="@+id/btnClear"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            android:rotationY="0"
            android:text="@string/btnClear"
            android:textColorLink="#673AB7" />

        <Button
            android:id="@+id/btn0"
            style="@style/CalculatorButton"
            android:layout_width="72dp"
            android:layout_height="94dp"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btnEqual"
            style="@style/CalculatorButton"
            android:layout_width="69dp"
            android:layout_height="85dp"
            android:text="@string/btnEqual" />

        <Button
            android:id="@+id/btnDivision"
            style="@style/CalculatorButton"
            android:layout_width="104dp"
            android:layout_height="97dp"
            android:text="@string/btnDivision" />
    </GridLayout>

</RelativeLayout>
